# whisper-typing

./: LICENSE  README.md  client.py  faster-whisper.py  flake.nix  pyproject.toml  server.py  voice_control.py
