[project]
name = "whisper-typing"
version = "0.1.0"
description = "Real-time voice input software using the Whisper model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "faster-whisper>=1.1.1",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "setproctitle>=1.3.6",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
]
